sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:13: error: value =- is not a member of Int
          rg=-1
            ^